Added some temporary gitignore lines for third_party/bullet since I want to keep the headers around in-case I want to work on integrating Bullet later, but I don't want to commit any of the files right now since I'm looking at possibly using ODE instead.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 _build/
 *.sublime-workspace
 .DS_Store
+third_party/bullet/
+third_party/_lib_debug/Bullet*.lib
+third_party/_lib_debug/Bullet*.pdb
+third_party/_lib_debug/Bullet*.txt
+third_party/_lib_debug/LinearMath*.lib
+third_party/_lib_debug/LinearMath*.pdb
+third_party/_lib_release/Bullet*.lib
+third_party/_lib_release/Bullet*.pdb
+third_party/_lib_release/Bullet*.txt
+third_party/_lib_release/LinearMath*.lib
+third_party/_lib_release/LinearMath*.pdb
