Added Open Dynamics Engine (ODE) headers to third_party folder and got things compiling/running using the pre-built static library version of ODE. The simulation is working but there's something weird with rotational inertia being SUPER slow. We may continue down the path of using ODE if we can fix this, but given my impression of the library we are going to hold off committing the third_party artifacts until we commit to it.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ third_party/_lib_release/Bullet*.pdb
 third_party/_lib_release/Bullet*.txt
 third_party/_lib_release/LinearMath*.lib
 third_party/_lib_release/LinearMath*.pdb
+third_party/ode/
+third_party/_lib_debug/ode.pdb
+third_party/_lib_debug/ode_singled.lib
+third_party/_lib_debug/ode_singled.pdb
