Got a basic physics simulation running with PhysX linked as a dll. We are going to hold off committing the headers/binaries for PhysX in the third_party folder until we fully flesh out how we want things to work. We may try compile the PhysX source files directly into an .obj that we link with, which would remove the need to have the pre-compiled binaries in the third_party/_lib_debug/ folder (they are rather large)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ third_party/ode/
 third_party/_lib_debug/ode.pdb
 third_party/_lib_debug/ode_singled.lib
 third_party/_lib_debug/ode_singled.pdb
+# TODO: Remove PhysX related ignores!
+third_party/physx/
+third_party/_lib_debug/PhysX*
+third_party/_lib_debug/LowLevelAABB_*
+third_party/_lib_debug/LowLevelDynamics_*
+third_party/_lib_debug/LowLevel_*
+third_party/_lib_debug/SceneQuery_*
+third_party/_lib_debug/SimulationController_*
