Added RUN_FUZZER option to build_config.h and got a basic libFuzzer entrypoint added to tests_main.c that runs fuzzing tests on cTokenizer implementation. Fixed a bug with the tokenizer returning Result_FailedToAllocateMemory when an empty string is found

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ third_party/bullet/
 third_party/ode/
 third_party/_lib_debug/old
 third_party/_lib_release/old
+
+_fuzzing/c_tokenizer_corpus/*
+!_fuzzing/c_tokenizer_corpus/*.c
