--- a/tests/android/AndroidManifest.xml
+++ b/tests/android/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	android:versionName="1.0" >
 	<!-- xmlns:tools="http://schemas.android.com/tools" -->
 	
+	<uses-feature android:glEsVersion="0x00020000"/>
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="36" />
 	
 	<!-- android:theme="@style/Theme.Sputnik" -->
@@ -18,9 +19,11 @@
 		android:supportsRtl="true" >
 		
 		<!-- android:theme="@style/Theme.Sputnik" -->
+		<!-- android:screenOrientation="landscape" android:configChanges="orientation" -->
 		<activity
 			android:name="android.app.NativeActivity"
-			android:exported="true" >
+			android:exported="true"
+			android:theme="@android:style/Theme.NoTitleBar" >
 			
 			<meta-data android:name="android.app.lib_name" android:value="tests"/>
 			
