Added configChanges property to activity node in AndroidManifest.xml. This allows us to not get completely reset whenever the screen rotates

--- a/tests/android/AndroidManifest.xml
+++ b/tests/android/AndroidManifest.xml
@@ -23,7 +23,8 @@
 		<activity
 			android:name="android.app.NativeActivity"
 			android:exported="true"
-			android:theme="@android:style/Theme.NoTitleBar" >
+			android:theme="@android:style/Theme.NoTitleBar"
+			android:configChanges="orientation|screenSize|screenLayout|keyboardHidden" >
 			
 			<meta-data android:name="android.app.lib_name" android:value="tests"/>
 			
